# Fashion-Trend-Intelligence

./: .gitignore  README.md  Support+de+présentation+ModeTrends (1).pptx  fashion_segmentation.ipynb  pyproject.toml  test.py  workflow.py
